--- a/new_webapp/templates/mitotic_graph.html
+++ b/new_webapp/templates/mitotic_graph.html
@@ -1,7 +1,7 @@
 {% include "header.html" %}
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom sectcontainer" id="plotmultiple">
-        <h1 class="h2 sectiontitle">Plot multiple strains</h1>
+        <h1 class="h2 sectiontitle">Load mitotic graph data</h1>
     </div>
     <div class="row">
         <div class="col-2">
@@ -20,8 +20,8 @@
         <div class="col-10">
             <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group me-2">
-                    <form method="post" action="{{ url_for('multiplestrains_plot', strainnumber=lines) }}" enctype="multipart/form-data">
-                        {% for n in range(lines) %}
+                    <form method="post" action="{{ url_for('mitotic_graph', strains=strains) }}" enctype="multipart/form-data">
+                        {% for n in range(strains) %}
                         <div class="row">
                             <div class="col-sm-5">
                                 <dl class="choosfilecontainer">
@@ -33,7 +33,7 @@
                             <div class="col-sm-4">
                                 <input type="text" name="strainname{{ n+1 }}" value="Introduce strain name" class="input-group-text choosebutton">
                             </div>
-                            {% if n+1==lines %}
+                            {% if n+1==strains %}
                             <div class="col-sm-3">
                                 <p class="submitbuttoncontainer">
                                     <input type="submit" class="btn btn-primary submitbutton" value="Submit">
@@ -42,12 +42,6 @@
                             {% endif %}
                         </div>
                         {% endfor %}
-                        <div class="row">
-                            <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" name="flexswitch" id="flexSwitchCheckDefault">
-                                <label class="form-check-label" for="flexSwitchCheckDefault">Mitotic zone graph</label>
-                            </div>
-                        </div>
                     </form>
                 </div>
             </div>
