mitotic graph now receives standard error calculated from file, for each mitotic zone
mitotic graph ratio to intensity graph now resizes with number of strains

--- a/new_webapp/static/css/dashboard.css
+++ b/new_webapp/static/css/dashboard.css
@@ -8,6 +8,9 @@ body {
   vertical-align: text-bottom;
 }
 
+.switcher{
+  margin: 3% 0 3%;
+}
 /*
  * Sidebar
  */
@@ -186,3 +189,4 @@ section.range-slider input:last-of-type::-moz-range-track {
   section.range-slider input[type=range]::-moz-focus-outer {
   border: 0;
 }
+
