--- a/new_webapp/templates/multiplestrains_plot.html
+++ b/new_webapp/templates/multiplestrains_plot.html
@@ -43,7 +43,7 @@
                         </div>
                         {% endfor %}
                         <div class="row">
-                            <div class="form-check form-switch">
+                            <div class="form-check form-switch switcher">
                                 <input class="form-check-input" type="checkbox" name="flexswitch" id="flexSwitchCheckDefault">
                                 <label class="form-check-label" for="flexSwitchCheckDefault">Mitotic zone graph</label>
                             </div>
