grapher can now receive DPI webpage form can now receive DPI selected by user(max 500)

--- a/new_webapp/templates/plot.html
+++ b/new_webapp/templates/plot.html
@@ -101,9 +101,13 @@
                   </div>
                   <div class="row justify-content-center">
                       <div class="col-sm-4">
-                      <p class="submitbuttoncontainer">
-                          <input type="submit" class="btn btn-primary submitbutton" value="Submit">
-                      </p>
+                          <label for="dpi_selector" class="form-label fTitle">DPI (max 500)</label>
+                          <input class="rangeValues" type="text" name="dpi" id="dpi_selector" value={{dpi}}>
+                      </div>
+                      <div class="col-sm-4">
+                          <p class="submitbuttoncontainer">
+                              <input type="submit" class="btn btn-primary submitbutton" value="Submit">
+                          </p>
                       </div>
                   </div>
               </form>
