--- a/new_webapp/templates/header.html
+++ b/new_webapp/templates/header.html
@@ -64,7 +64,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">
+                        <a class="nav-link" href="{{ url_for('multiplestrains_plot', strainnumber = 1) }}">
                             <span data-feather="file"></span>
                             Plot single strain
                         </a>
