--- a/new_webapp/templates/multiplestrains_plot.html
+++ b/new_webapp/templates/multiplestrains_plot.html
@@ -1,7 +1,11 @@
 {% include "header.html" %}
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom sectcontainer" id="plotmultiple">
+        {% if lines != 1 %}
         <h1 class="h2 sectiontitle">Plot multiple strains</h1>
+        {% else %}
+        <h1 class="h2 sectiontitle">Plot single strain</h1>
+        {% endif %}
     </div>
     <div class="row">
         <div class="col-2">
