--- a/templates/footer.html
+++ b/templates/footer.html
@@ -28,8 +28,8 @@
         <div class="collapse" id="collapse2">
             <div class="card card-body">
                 <div class="row">
-                    <div class="col sm-6"><img class="germlineimg" src="../static/images/GetStarted -2a.png" alt="GetStarted -2a.png"></div>
-                    <div class="col sm-6"><img class="germlineimg" src="../static/images/GetStarted -2b.png" alt="GetStarted -2b.png"></div>
+                    <div class="col sm-6"><img class="germlineimg" src="../static/images/GetStarted%20-2a.png" alt="GetStarted -2a.png"></div>
+                    <div class="col sm-6"><img class="germlineimg" src="../static/images/GetStarted%20-2b.png" alt="GetStarted -2b.png"></div>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <div class="card card-body">
                 <p>Right click to switch from straight line to segmented line. Double-click to change line width.</p>
                 <br>
-                <img class="germlineimg" src="../static/images/GetStarted - 4.PNG" alt="GetStarted - 4.PNG">
+                <img class="germlineimg" src="../static/images/GetStarted%20-%204.PNG" alt="GetStarted - 4.PNG">
             </div>
         </div>
         <br>
