--- a/templates/footer.html
+++ b/templates/footer.html
@@ -94,16 +94,20 @@
 </ol>
 </p>
 <hr class="my-4">
-<p>If you have any doubt of how to use the website after reading the "Get Started" information:</p>
+<p>If you have any doubt of how to use the website after reading the "Get Started" information: <a class="btn btn-primary" href="mailto:dpuerta@usal.es" role="button">Contact me</a></p>
 <br>
-<p class="lead">
-    <a class="btn btn-primary btn-lg" href="mailto:dpuerta@usal.es" role="button">Contact me</a>
-</p>
+<div class="cr"><a href="https://github.com/dpuertamartos/Germline-Analyzer"><img src="../static/images/github.png" class="img-fluid github"></a></div>
+<script>
+    let date =  new Date().getFullYear();
+    const newDate = document.createElement("span")
+    newDate.textContent = " David Puerta ©" + date
+    const Copyright = document.querySelector(".cr").append(newDate)
+</script>
+</div>
 </div>
 </main>
 </div>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script><script src="../static/js/dashboard.js"></script>
 <script>
