--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% include "header.html" %}
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
         <div class="d-flex justify-content-around flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom sectcontainer" id="plotmultiple">
+            <a class="btn btn-outline-dark" href="{{ url_for('trial') }}">Try app with preloaded data</a>
+            <span> or </span>
             <h1 class="h2 sectiontitle">Plot multiple strains</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group me-2">
