--- a/templates/plot.html
+++ b/templates/plot.html
@@ -70,11 +70,11 @@
                                       <label for="customRange100" class="form-label fTitle">Compare until selected length</label>
                                   </div>
                                   <div class="col-sm-7">
-                                      <input type="text" id="textInput1" value={{npoints}}>
+                                      <input type="text" id="textInput1" value={{min_length}}>
                                   </div>
                               </div>
                               <div class="row">
-                                  <input type="range" name="number_of_points" class="form-range slid" value={{npoints}} min="2" max="100" step="2" id="customRange100" onchange="updateTextInput1(this.value);">
+                                  <input type="range" name="number_of_points" class="form-range slid" value={{min_length}} min="2" max="{{min_length}}" step="10" id="customRange100" onchange="updateTextInput1(this.value);">
                               </div>
                           </div>
                       {% endif %}
