now it automatic labels X and Y axis, fixed bug in mitotic graph loading files page, all strains appeared with the same name

--- a/templates/mitotic_graph.html
+++ b/templates/mitotic_graph.html
@@ -30,7 +30,7 @@
                             </div>
                             <div class="col-sm-4">
                                 <fieldset disabled>
-                                <input type="text" id="disabledTextInput" class="form-control" placeholder="{{strains_names[0]}}">
+                                <input type="text" id="disabledTextInput" class="form-control" placeholder="{{strains_names[n]}}">
                                 </fieldset>
                             </div>
                             {% if n+1==strains %}
