allows downloading data from one or multiple strains

--- a/templates/plot.html
+++ b/templates/plot.html
@@ -199,9 +199,16 @@
                           <label for="dpi_selector" class="form-label fTitle">DPI (max 500)</label><input class="rangeValues" type="text" name="dpi" id="dpi_selector" value={{dpi}}>
                       </div>
                       <div class="col-sm-4">
-                          <p class="submitbuttoncontainer">
-                              <input type="submit" class="btn btn-primary submitbutton" value="Submit">
-                          </p>
+                          <div class="row justify-content-center">
+                              <p class="submitbuttoncontainer">
+                                <input type="submit" name="action" class="btn btn-primary submitbutton" value="Submit">
+                              </p>
+                          </div>
+                         <div class="row justify-content-center">
+                              <p class="submitbuttoncontainer">
+                                <input type="submit" name="action" class="btn btn-secondary downloadbutton" value="Extract table">
+                              </p>
+                          </div>
                       </div>
                   </div>
               </form>
